remove oral presentation for simplicity

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="paper">
     <div class="paper_title">Zero-shot Unsupervised Transfer Instance Segmentation</div>
     <div class="authors">Gyungin Shin, Samuel Albanie, Weidi Xie</div>
-    <div class="venue"><i>CVPR workshop on Learning with Limited Labelled Data for Image and Video Understanding</i>, 2023 <i class="feature">Best Paper Award & Oral Presentation</i></div>
+    <div class="venue"><i>CVPR workshop on Learning with Limited Labelled Data for Image and Video Understanding</i>, 2023 <i class="feature">Best Paper Award</i></div>
     <div><a class="link" href="https://openaccess.thecvf.com/content/CVPR2023W/L3D-IVU/papers/Shin_Zero-Shot_Unsupervised_Transfer_Instance_Segmentation_CVPRW_2023_paper.pdf">[PDF]</a> <a class="link" href="pdf/posters/zutis_poster.pdf">[Poster]</a> <a class="link" href="https://github.com/noelshin/zutis">[Code]</a></div>
   </div>
 
